--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,10 @@
 .App {
 }
+
+.logo {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
