--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -52,6 +52,11 @@
   width: 100%;
 }
 
+.input-error,
+.input-error:hover {
+  outline: 2px solid #ff0000;
+}
+
 .btn {
   padding: 0.5rem 0;
   border: none;
@@ -64,6 +69,7 @@
   padding: 0.5rem 1rem;
   background-color: var(--input-bg-color);
   color: var(--title-color);
+  font-size: 1.4rem;
   cursor: text;
 }
 
