--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,7 +1,7 @@
 .calculator {
   max-width: 60rem;
   margin: 5rem auto 0;
-  padding: 3rem;
+  padding: 3rem 3rem 3.2rem 3rem;
   display: flex;
   justify-content: space-between;
   background-color: var(--white-color);
@@ -11,6 +11,10 @@
 .calculator,
 .calculator-results {
   border-radius: 1rem;
+}
+
+.calculator-inputs {
+  position: relative;
 }
 
 .calculator-inputs,
@@ -54,7 +58,7 @@
 
 .input-error,
 .input-error:hover {
-  outline: 2px solid #ff0000;
+  outline: 2px solid var(--error-color);
 }
 
 .btn {
