--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --main-bg-color: hsl(185, 41%, 84%);
   --input-bg-color: hsl(189, 41%, 97%);
   --white-color: hsl(0, 0%, 100%);
+  --error-color: hsl(0, 100%, 50%);
 
   --font: 1.5rem;
 }
